--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
-
+depoly.sh
+_book.zip
 # Editor directories and files
 .idea
 .vscode
